lots of stuff, lsp, some inf-clojure stuff

--- a/init.org
+++ b/init.org
@@ -131,14 +131,15 @@ This variable tells Emacs to prefer the =.el= file if it's newer, even if there 
     (resize-window-add-choice ?a #'projectile-find-file "Projectile find file")
     (resize-window-add-choice ?h (lambda () (dired "~/projects/clojure"))
                               "Visit the clojure directory")
-    (resize-window-add-choice ?u (lambda () (dired "~/projects/clojure/metabase"))
+    (resize-window-add-choice ?u (lambda () (dired "~/projects/work/metabase"))
                               "Visit the work directory")
     (resize-window-add-choice ?d (lambda () (dired "~/projects/dev"))
                               "Visit dev directoryq")
     (resize-window-add-choice ?m (lambda () (resize-window--window-push))
                               "Push window state onto window stack")
     (resize-window-add-choice ?v (lambda () (find-file "~/projects/projects.org"))
-                              "Edit project file"))
+                              "Edit project file")
+    (resize-window-add-choice ?j (lambda () (crux-swap-windows 1)) "Swap window positions"))
 #+END_SRC
 
 - turn off the stupid system bell but make it visible!
@@ -319,8 +320,10 @@ The =diminish= package makes it possible to remove clutter from the modeline. He
   (use-package diminish
     :defer 1)
 
-  (use-package minions
-    :config (minions-mode))
+  ;; (use-package minions
+  ;;   :config (minions-mode)
+  ;;   (add-to-list 'minions-direct 'inf-clojure-minor-mode)
+  ;;   (add-to-list 'minions-whitelist '(inf-clojure-minor-mode)))
 
   (use-package moody
     :config
@@ -376,7 +379,7 @@ Themes love to make the background black. So we give a temp file, never to be se
     (let* ((themes (custom-available-themes))
            (theme (symbol-name (nth (cl-random (length themes)) themes))))
       (message "Loading: %s" theme)
-      (consult-theme theme)))
+      (counsel-load-theme-action theme)))
 
   (bind-key "C-c l" #'personal/random-theme)
 #+end_src
@@ -730,7 +733,11 @@ Keep ivy around because I want to use counsel's ~counsel-ag~ which is super usef
 
 #+BEGIN_SRC emacs-lisp
   (use-package magit
-    :bind ("C-x g" . magit-status))
+    :bind (("C-x g" . magit-status)
+           :map
+           magit-status-mode-map
+           ("M-RET" . magit-diff-visit-file-other-window)
+           ("C-RET" . magit-diff-visit-file-other-window)))
 #+END_SRC
 
 *** Keybindings
@@ -884,13 +891,34 @@ Clojure mode and CIDER are dev versions locally
   ;; testing dependency for inf-clojure
   (use-package assess)
 
+  (defun personal/repl-requires ()
+    "Send repl requires."
+    (interactive)
+    (when-let ((inf-proc (inf-clojure-proc 'no-error)))
+      (inf-clojure--send-string inf-proc "(apply require clojure.main/repl-requires)")))
+
+  (defun inf-clojure-send-input ()
+    "Send."
+    (interactive)
+    (let ((clojure-process (inf-clojure-proc)))
+      (with-current-buffer (process-buffer clojure-process)
+        (comint-goto-process-mark)
+        (while (looking-at-p "\s*\n")
+          (forward-line))
+        (set-marker (process-mark clojure-process) (point))
+        (comint-send-input t))))
+
   (use-package inf-clojure
     :demand t
     :load-path "~/projects/dev/inf-clojure/"
     :bind (:map
            inf-clojure-mode-map
            ("RET" . newline)
-           ("C-j" . comint-send-input)))
+           ("C-j" . inf-clojure-send-input)
+           ("C-c h" . personal/repl-requires)
+           :map
+           inf-clojure-minor-mode-map
+           ("C-c h" . personal/repl-requires)))
 
   (use-package cider
     :demand t
@@ -900,6 +928,7 @@ Clojure mode and CIDER are dev versions locally
     :config
     (setq cider-invert-insert-eval-p t)
     (setq cider-switch-to-repl-on-insert nil)
+    (setq cider-auto-select-test-report-buffer nil)
     (setq cider-font-lock-dynamically t)
     (setq cider-show-error-buffer nil)
     (setq cider-repl-display-help-banner nil)
@@ -909,6 +938,7 @@ Clojure mode and CIDER are dev versions locally
            cider-repl-mode-map
            ("RET" . cider-repl-newline-and-indent)
            ("C-j" . cider-repl-return)
+           ("C-c SPC" . clojure-align)
            ;; :map
            ;; paredit-mode-map
            ;; ("C-j" . cider-repl-return)
@@ -966,25 +996,20 @@ I'm enjoying a way to use registers to send forms to the repl
 Use lsp-mode with the excellent lsp-clojure package.
 
 #+BEGIN_SRC emacs-lisp
-  (when personal/work-machine
-    (use-package lsp-mode
-      :load-path "~/projects/elisp/lsp-mode"
-      :hook ((clojure-mode . lsp)
-             (clojurec-mode . lsp)
-             (clojurescript-mode . lsp))
-      :init
-      (setq lsp-enable-completion-at-point nil)
-      ;; (setq indent-region-function #'clojure-indent-function)
-      :config
-      (require 'lsp-clojure)
-      (dolist (m '(clojure-mode clojurec-mode clojurescript-mode))
-        (add-to-list 'lsp-language-id-configuration `(,m . "clojure")))
-      (setq lsp-clojure-server-command '("bash" "-c" "cd ~/projects/clojure/clojure-lsp && lein run")
-            lsp-enable-indentation nil)
-      ;; (add-hook 'clojure-mode-hook #'lsp)
-      ;; (add-hook 'clojurescript-mode-hook #'lsp)
-      ;; (add-hook 'clojurec-mode-hook #'lsp)
-      ))
+  (use-package lsp-mode
+    :ensure t
+    :hook ((clojure-mode . lsp)
+           (clojurec-mode . lsp)
+           (clojurescript-mode . lsp))
+    :config
+    (setq lsp-enable-indentation nil)
+    (setq lsp-enable-file-watchers nil) ;; annoying and i can't specify paths
+    ;; add paths to your local installation of project mgmt tools, like lein
+    (dolist (m '(clojure-mode
+                 clojurec-mode
+                 clojurescript-mode
+                 clojurex-mode))
+       (add-to-list 'lsp-language-id-configuration `(,m . "clojure"))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -995,17 +1020,30 @@ Use lsp-mode with the excellent lsp-clojure package.
     (remove-hook 'clojurescript-mode-hook #'lsp))
 #+END_SRC
 
+#+begin_src emacs-lisp
+  (use-package lsp-ui
+    :ensure t
+    :after lsp-mode
+    :init
+    (setq lsp-ui-doc-enable nil)
+    (setq lsp-ui-sideline-show-code-actions nil)
+    :bind ("C-c C-d" . 'lsp-ui-doc-show)
+    :commands lsp-ui-mode)
+#+end_src
+
 Use the hydra I cooked up recently
 
 #+BEGIN_SRC emacs-lisp
-  (when (or personal/work-machine personal/mac-machine)
-    (use-package lsp-clojure-hydra
-      :after (lsp-mode lsp-mode cider)
-      :load-path "~/projects/elisp/lsp-clojure-hydra"
-      :bind (("C-c C-l" . lsp-clojure-refactor-menu/body)
-             :map
-             cider-mode-map
-             ("C-c C-l" . lsp-clojure-refactor-menu/body))))
+  (use-package lsp-clojure-hydra
+    :after (lsp-mode cider)
+    :load-path "~/projects/elisp/lsp-clojure-hydra"
+    :bind (("C-c C-l" . lsp-clojure-refactor-menu/body)
+           :map
+           cider-mode-map
+           ("C-c C-l" . lsp-clojure-refactor-menu/body)
+           :map
+           inf-clojure-minor-mode-map
+           ("C-c C-l" . lsp-clojure-refactor-menu/body)))
 #+END_SRC
 
 ** Haskell
@@ -1135,6 +1173,7 @@ For some reason this was getting lost in the startup shenanigans so we set it on
 #+BEGIN_SRC emacs-lisp
   (set-frame-font "Fira Code" nil t)
   (defun personal/set-font ()
+    (set-frame-font "Fira Code" nil t)
     (interactive)
     (set-face-attribute 'default nil :height (cond
                                               (personal/linux-machine 130)
