insert rich comment form

--- a/init.org
+++ b/init.org
@@ -908,6 +908,17 @@ Clojure mode and CIDER are dev versions locally
         (set-marker (process-mark clojure-process) (point))
         (comint-send-input t))))
 
+  (defun personal/insert-comment ()
+    (interactive)
+    (end-of-defun)
+    (insert "\n")
+    (insert "(comment\n  )\n")
+    (clojure-backward-logical-sexp)
+    (forward-char 1)
+    (clojure-forward-logical-sexp)
+    (insert "\n")
+    (indent-according-to-mode))
+
   (use-package inf-clojure
     :demand t
     :load-path "~/projects/dev/inf-clojure/"
@@ -918,7 +929,8 @@ Clojure mode and CIDER are dev versions locally
            ("C-c h" . personal/repl-requires)
            :map
            inf-clojure-minor-mode-map
-           ("C-c h" . personal/repl-requires)))
+           ("C-c h" . personal/repl-requires)
+           ("C-M-i" . personal/insert-comment)))
 
   ;; ‘C-x r s <register-key>’ save to register
   ;; 'C-c C-j x <register-key' to send to repl
