Turn off new defaulted-on undo-history saving files

--- a/init.org
+++ b/init.org
@@ -563,7 +563,8 @@ Use undo tree
     :init
     (global-undo-tree-mode)
     (setq undo-tree-visualizer-timestamps t)
-    (setq undo-tree-visualizer-diff t))
+    (setq undo-tree-visualizer-diff t)
+    (setq undo-tree-auto-save-history nil))
 
 #+END_SRC
 
