no more eldoc in emacs

--- a/init.org
+++ b/init.org
@@ -889,6 +889,9 @@ Clojure mode and CIDER are dev versions locally
     (put-clojure-indent 'PATCH 1)
     (put-clojure-indent 'DELETE 1))
 
+  ;; babashka shebang support #!/usr/bin/env bb
+  (add-to-list 'interpreter-mode-alist '("bb" . clojure-mode))
+
   ;; testing dependency for inf-clojure
   (use-package assess)
 
@@ -923,6 +926,8 @@ Clojure mode and CIDER are dev versions locally
   (use-package inf-clojure
     :demand t
     :load-path "~/projects/dev/inf-clojure/"
+    :config
+    (setq inf-clojure-enable-eldoc nil)
     :bind (:map
            inf-clojure-mode-map
            ("RET" . newline)
@@ -930,6 +935,7 @@ Clojure mode and CIDER are dev versions locally
            ("C-c h" . personal/repl-requires)
            :map
            inf-clojure-minor-mode-map
+           ("C-c o" . inf-clojure-clear-repl-buffer)
            ("C-c h" . personal/repl-requires)
            ("C-M-i" . personal/insert-comment)))
 
