these quoting rules changed on me

--- a/init.org
+++ b/init.org
@@ -933,6 +933,7 @@ Clojure mode and CIDER are dev versions locally
            ("RET" . newline)
            ("C-j" . inf-clojure-send-input)
            ("C-c h" . personal/repl-requires)
+           ("C-c o" . inf-clojure-clear-repl-buffer)
            :map
            inf-clojure-minor-mode-map
            ("C-c o" . inf-clojure-clear-repl-buffer)
@@ -951,7 +952,7 @@ Clojure mode and CIDER are dev versions locally
         (user-error "No saved form in register"))))
   (define-key inf-clojure-insert-commands-map (kbd "x") #'inf-clojure-insert-register-contents)
   (define-key inf-clojure-insert-commands-map (kbd "C-x") #'inf-clojure-insert-register-contents)
-  (define-key inf-clojure-mode-map (kbd "C-c C-j") 'inf-clojure-insert-commands-map)
+  (define-key inf-clojure-mode-map (kbd "C-c C-j") inf-clojure-insert-commands-map)
 
   (use-package cider
     :demand t
