use clojure.test/run-test on individual test

--- a/init.org
+++ b/init.org
@@ -952,7 +952,7 @@ Clojure mode and CIDER are dev versions locally
           (clojure-forward-logical-sexp)
           (clojure-forward-logical-sexp)
           (clojure-backward-logical-sexp)
-          (set-register ?i (s-concat "(" (thing-at-point 'symbol) ")"))
+          (set-register ?i (s-concat "(clojure.test/run-test " (thing-at-point 'symbol) ")"))
           (message "set i register to: %s" (get-register ?i)))
       (message "not looking at test")))
 
