extract sub-repls
now you could also run

```
(personal/send-pp-repl)
;; or
(personal/send-fipp-repl)
```

--- a/init.org
+++ b/init.org
@@ -894,6 +894,7 @@ Clojure mode and CIDER are dev versions locally
 
   ;; testing dependency for inf-clojure
   (use-package assess)
+  (require 'inf-clojure)
 
   (defun personal/repl-requires ()
     "Send repl requires."
@@ -901,11 +902,8 @@ Clojure mode and CIDER are dev versions locally
     (when-let ((inf-proc (inf-clojure-proc 'no-error)))
       (inf-clojure--send-string inf-proc "(apply require clojure.main/repl-requires)")))
 
-  (defun personal/work-repl ()
-    "start a work repl on port 50505"
-    (interactive)
-    (let ((inf-clojure-custom-repl-type 'clojure))
-      (inf-clojure-connect "localhost" 50505))
+  (defun personal/send-fipp-repl ()
+    "Setup a fipp subrepl."
     (let ((requires "(require '[clojure.core.server :as server]
              'clojure.main
              '[clojure.string :as str]
@@ -922,9 +920,8 @@ Clojure mode and CIDER are dev versions locally
       (sit-for 0.2)
       (inf-clojure-insert-and-eval ":ready")))
 
-  (defun personal/repl (port)
-    "Connect to a clojure repl at PORT."
-    (interactive "nRepl port: ")
+  (defun personal/send-pp-repl ()
+    "Setup a clojure.pprint/pprint subrepl."
     (let ((requires "(require '[clojure.string :as str]
              '[clojure.core.server :as server]
              '[clojure.pprint :as pprint]
@@ -935,13 +932,25 @@ Clojure mode and CIDER are dev versions locally
      :read server/repl-read
      :eval (fn [form] (binding [clojure.test/*test-out* *out*] (eval form)))
      :print clojure.pprint/pprint)"))
-      (let ((inf-clojure-custom-repl-type 'clojure))
-        (inf-clojure-connect "localhost" port))
       (inf-clojure-insert-and-eval requires)
       (sit-for 0.2)
       (inf-clojure-insert-and-eval sub-repl)
       (sit-for 0.2)
       (inf-clojure-insert-and-eval ":ready")))
+
+  (defun personal/work-repl ()
+    "start a work repl on port 50505"
+    (interactive)
+    (let ((inf-clojure-custom-repl-type 'clojure))
+      (inf-clojure-connect "localhost" 50505))
+    (personal/send-fipp-repl))
+
+  (defun personal/repl (port)
+    "Connect to a clojure repl at PORT."
+    (interactive "nRepl port: ")
+    (let ((inf-clojure-custom-repl-type 'clojure))
+      (inf-clojure-connect "localhost" port))
+    (personal/send-pp-repl))
 
   (defun personal/set-test ()
     (interactive)
